Fix z-index issues with tooltips in .checkbox
Fixes Issue #670

--- a/less/_checkboxes.less
+++ b/less/_checkboxes.less
@@ -2,7 +2,6 @@
   padding-top: 20px;
 }
 .checkbox {
-  transform: translateZ(0); // Force 3d rendering
   label {
     cursor: pointer;
     padding-left: 0; // Reset for Bootstrap rule
